Fixed: Modal z-index

--- a/applications/client/artemis/src/styles/TicketModal.module.scss
+++ b/applications/client/artemis/src/styles/TicketModal.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 9999;
     left:0;
     top:0;
     height: 100vh;
